# blight

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  action.html  enums.html  exceptions.html  index.html  protocols.html  pyproject.toml  setup.py  tool.html  util.html
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-deploy.yml  docs.yml  lint.yml  pip-audit.yml  release.yml  tests.yml
.trunk/: trunk.yaml
actions/: benchmark.html  cc_for_cxx.html  find_outputs.html  ignore_werror.html  index.html  inject_flags.html  record.html  skip_strip.html
src/blight/: __init__.py  _cli.py  action.py  cli.py  constants.py  enums.py  exceptions.py  protocols.py  tool.py  util.py
src/blight/actions/: __init__.py  benchmark.py  bitcode_extract.py  cc_for_cxx.py  demo.py  embed_bitcode.py  embed_commands.py  extract_bitcode.py  find_inputs.py  find_outputs.py  gllvm_bitcode_extract.py  ignore_flags.py  ignore_flto.py  ignore_werror.py  inject_flags.py  lint.py  record.py  record_compiler.py  skip_strip.py
src/canker/: __init__.py  action.py  cli.py  enums.py  exceptions.py  protocols.py  tool.py  util.py
src/canker/actions/: __init__.py  benchmark.py  inject_flags.py  record.py
test/: conftest.py  test_action.py  test_enums.py  test_tool.py  test_util.py
test/actions/: test_cc_for_cxx.py  test_demo.py  test_embed_bitcode.py  test_embed_commands.py  test_extract_bitcode.py  test_find_inputs.py  test_find_outputs.py  test_ignore_flags.py  test_ignore_flto.py  test_ignore_werror.py  test_inject_flags.py  test_lint.py  test_record.py  test_skip_strip.py
test/fixtures/: foo.c
