[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "blight"
dynamic = ["version"]
description = "A catch-all compile-tool wrapper"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "William Woodruff", email = "william@trailofbits.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "click >= 7.1,< 9.0",
  "typing_extensions",
  "pydantic ~= 1.7",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "pytest-cov",
  "pretend",
  "coverage[toml]",
  "twine",
  "pdoc3",
  "mypy",
  "ruff",
]

[project.scripts]
"blight-env" = "blight.cli:env"
"blight-exec" = "blight.cli:exec_"
"blight-cc" = "blight.cli:tool"
"blight-c++" = "blight.cli:tool"
"blight-cpp" = "blight.cli:tool"
"blight-ld" = "blight.cli:tool"
"blight-as" = "blight.cli:tool"
"blight-ar" = "blight.cli:tool"
"blight-strip" = "blight.cli:tool"
"blight-install" = "blight.cli:tool"

[project.urls]
Homepage = "https://pypi.org/project/blight"
Documentation = "https://trailofbits.github.io/blight/"
Issues = "https://github.com/trailofbits/blight/issues"
Source = "https://github.com/trailofbits/blight"

[tool.black]
line-length = 100

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints
omit = ["src/blight/cli.py"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "UP", "I", "N", "YTT", "BLE", "C4"]
target-version = "py37"
