[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "blight"
dynamic = ["version"]
description = "A catch-all compile-tool wrapper"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "William Woodruff", email = "william@trailofbits.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]
dependencies = ["click >= 7.1,< 9.0", "typing_extensions", "pydantic ~= 1.7"]
requires-python = ">=3.7"

[project.optional-dependencies]
doc = ["pdoc"]
test = ["pytest", "pytest-cov", "pretend", "coverage[toml]"]
dev = ["blight[doc,test]", "twine"]

[project.scripts]
"blight-env" = "blight._cli:env"
"blight-exec" = "blight._cli:exec_"
"blight-cc" = "blight._cli:tool"
"blight-c++" = "blight._cli:tool"
"blight-cpp" = "blight._cli:tool"
"blight-ld" = "blight._cli:tool"
"blight-as" = "blight._cli:tool"
"blight-ar" = "blight._cli:tool"
"blight-strip" = "blight._cli:tool"
"blight-install" = "blight._cli:tool"

[project.urls]
Homepage = "https://pypi.org/project/blight"
Documentation = "https://trailofbits.github.io/blight/"
Issues = "https://github.com/trailofbits/blight/issues"
Source = "https://github.com/trailofbits/blight"

[tool.black]
line-length = 100

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints
omit = ["src/blight/_cli.py"]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "UP", "I", "N", "YTT", "BLE", "C4", "SIM"]
target-version = "py37"
